--- a/style.css
+++ b/style.css
@@ -183,3 +183,135 @@ html {
     opacity: 1;
   }
 }
+
+/* [popular tours] */
+.popular-tours{
+  padding: 5rem 0 10rem 0;
+}
+.popular-tours-heading{
+  font-size: 8rem;;
+  text-align: center;
+  margin-bottom: 8rem;
+  color: var(--primary-color);
+  text-shadow: 0.1rem 0.5rem 0.5rem var(--grey-color);
+}
+.cards-wrapeer{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* css 4 */
+
+.card{
+  width: 35rem;
+  position: relative;
+  /* css 8. js 2 */
+  perspective: 150rem;
+}
+/* css 4 */
+.card-image{
+  width: 100%;
+  border-radius: var(--size-border-basic-radius);
+}
+
+.front-side{
+  text-align: center;
+  background-color: var(--white-color);
+  border-radius: 1rem;
+  /* css 6 */
+  position: relative;
+  z-index: 10;
+  /* css 8 */
+  opacity: 0.9;
+  /* js 2 */
+  transition: opacity 1s, transform 1s,box-shadow 1s;
+}
+
+/* js 2 */
+.change >.front-side{
+  transform: translateZ(-5rem) translateX(3rem);
+  box-shadow: 0 2rem 4rem #777;
+  opacity: 0.5;
+  z-index: 0;
+}
+
+.tour-name{
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-shadow: 0 0 2rem var(--grey-color);
+  /* css 6 */
+  position: absolute;
+  top: 30%;
+  right:1.5rem;
+  color: var(--white-color);
+}
+
+.card-list{
+  width: 80%;
+  margin: auto;
+  padding: 2rem 0 3rem 0;
+}
+.card-list-item{
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: var(--light-grey-color);
+  margin: 2rem 0;
+  border-bottom: 0.1rem solid var(--primary-color);
+  padding-bottom: 1.5rem;
+}
+
+.back-side{
+  /* css 6 */
+  position: absolute;
+  top: 0;
+  background-color: var(--primary-color);
+  width: 100%;
+  height: 100%;
+  border-radius: var(--size-border-basic-radius);
+  box-shadow: 1rem 1rem #777;
+  flex-direction: column;
+
+/* css 8 */
+opacity: 0.5;
+transform: translateZ(-5rem) translateX(3rem);
+/* JS 2 */
+transition: opacity 1s , transform 1s, box-shadow  1s;
+}
+.change> .back-side {
+  transform: translateZ(0) translateX(0);
+  box-shadow: 0 0.5rem 2rem #aaa;
+  opacity: 0.9;
+}
+
+.tour-price{
+  font-size: 5rem;
+  font-weight: 300;
+  color: var(--white-color);
+  margin-bottom: 3rem;
+}
+.card-button{
+  color: var(--primary-color);
+  background-color: var(--white-color);
+  border: none;
+  font-size: 2.5rem;
+  letter-spacing: 2rem;
+  border-radius: var(--size-border-basic-radius);
+  cursor: pointer;
+}
+.navigation-button{
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+  background-color: var(--white-color);
+  padding: 0.5rem;
+  color: var(--light-grey-color);
+  border: none;
+  border-radius: var(--size-border-basic-radius);
+  font-size: 1.5rem;
+  font-weight: 600;
+
+  text-transform: uppercase;
+  letter-spacing: var(--letterspacing-basic);
+  cursor: pointer;
+}
