--- a/style.css
+++ b/style.css
@@ -44,7 +44,10 @@
   text-decoration: none;
   box-sizing: border-box;
   outline: none;
+  
 }
+
+
 
 html {
   font-size: 62.5%;
@@ -66,6 +69,16 @@ html {
 }
 
 /* [navbar] */
+
+.navbar-icon{
+  width:5.5rem;
+  height:5.5rem;
+  background-color: var(--white-color);
+  border-radius: 50%;
+}
+
+
+
 
 /* [header] */
 
@@ -511,4 +524,33 @@ html {
   max-height: 15rem;
   max-width: 100%;
   min-width: 50rem;
+}
+
+/* [footer] */
+.footer{
+  background-color: var(--grey-color);
+  padding: 4rem 0 2rem 0;
+}
+.footer-list{
+  font-size: 2rem;
+  color: var(--white-color);
+  margin: 0 2rem;
+  background-color: var(--grey-color);
+  padding: 0.3rem 3rem;
+  /* css 24 */
+  transition: all 0.2s;
+}
+
+.footer-link:hover {
+  /* CSS 24 */
+  transform: rotate(-10deg);
+  box-shadow: 0 2rem 3rem #000;
+}
+
+.footer-paragraph{
+  text-align: center;
+  font-size: 1.5rem;
+  color:var(--secondary-color);
+  letter-spacing: var(--letterspacing-basic);
+  margin-top: 5rem;
 }
