--- a/style.css
+++ b/style.css
@@ -75,7 +75,75 @@ html {
   height:5.5rem;
   background-color: var(--white-color);
   border-radius: 50%;
+  cursor: pointer;
+  /* css 26 */
+  flex-direction: column;
 }
+.open-navbar-icon{
+  position: fixed;
+  top: 6.5rem;
+  left: 6.5rem;
+  z-index: 200;
+}
+/* css 26 */
+.navbar-icon .line{
+  height: 0.5rem;
+  width: 3.5rem;
+}
+
+.open-navbar-icon .line{
+  margin:0.3rem 0;
+}
+
+.navbar-wrapper{
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--primary-color);
+  position: fixed;
+  left: 0;
+  /* css 38 .JS 6 */
+  bottom: 100%;
+  opacity: 0;
+
+  z-index: 300;
+  padding: 3.5rem 5.5rem 3.5rem 3.5rem;
+
+  /* css 40 */
+  transition: bottom 0.5s, opacity 0.2s;
+}
+
+/* css 38. js 6 */
+.change .navbar-wrapper{
+  bottom: -10%;
+  opacity: 1;
+  /* css 40 */
+  transition: bottom 0.5s; opacity 0.2s 0.25s;
+}
+
+.navbar{
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(images/navbar-bg.jpg) center no-repeat;
+  position: relative;
+  overflow-y: hidden;
+}
+
+.close-navbar-icon{
+  /* css 30 */
+  position: absolute;
+  top: 3rem;
+  left:3rem;
+  z-index: 300;
+}
+
+
+
+
+
+
+
+
+
 
 
 
